<resources>
    <string name="app_name">Online Examination Project</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new">Sign up</string>
    <string name="login">Login</string>
    <string name="admin_name">Name</string>
    <string name="confirm_password">Confirm</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_email_address">Confirm Email Address</string>
    <string name="drawer_close">close</string>
    <string name="drawer_open">open</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_password">REESET PASSWORD</string>
    <string name="upload_to_server">Upload to Server</string>

    <string-array name="options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>